feat: implement user profiles, job application tracking, and saved jobs functionality with database migration and REST endpoints.